# sync_dns

./: CMakeLists.txt  main.cpp
includes/: occiCommon.h  ociap.h
