cmake_minimum_required(VERSION 2.8)

project(sync_dns)
add_executable(${PROJECT_NAME} "main.cpp")

set( boost_URL "http://sourceforge.net/projects/boost/files/boost/1.65.1/boost_1_65_1.tar.bz2" )
set( boost_SHA1 "9f1dd4fa364a3e3156a77dc17aa562ef06404ff6" )
set( boost_INSTALL ${CMAKE_CURRENT_BINARY_DIR}/boost )
set( boost_INCLUDE_DIR ${boost_INSTALL}/include )
set( boost_LIB_DIR ${boost_INSTALL}/lib )

set(BOOST_ROOT ${boost_INSTALL})
set(BOOST_INCLUDE_DIRS "${BOOST_ROOT}/include")
set(BOOST_LIBRARY_DIRS "${BOOST_ROOT}/lib")
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME ON)
find_package(Boost COMPONENTS system log thread filesystem REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})
target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})

#add_library(libclntsh SHARED IMPORTED)
#set_target_properties(libclntsh PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/libclntsh.so.11.1)

#add_library(libocilib STATIC IMPORTED)
#set_target_properties(libocilib PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/libocilib.a)

add_library(libconfig STATIC IMPORTED)
#set_target_properties(libconfig PROPERTIES IMPORTED_LOCATION /usr/lib/x86_64-linux-gnu/libconfig++.a)
set_target_properties(libconfig PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/libconfig++.a)
target_link_libraries(${PROJECT_NAME} libconfig)
#target_link_libraries(${PROJECT_NAME}  libocilib)
#target_link_libraries(${PROJECT_NAME}  libclntsh)

add_library(libnnz11 STATIC IMPORTED)
set_target_properties(libnnz11 PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libnnz11.so)
add_library(libclntsh SHARED IMPORTED)
set_target_properties(libclntsh PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libclntsh.so.11.1)
add_library(libociei STATIC IMPORTED)
set_target_properties(libociei PROPERTIES IMPORTED_LOCATION /usr/local/lib/instantclient_11_2/libociei.so)
add_library(libocilib STATIC IMPORTED)
set_target_properties(libocilib PROPERTIES IMPORTED_LOCATION /usr/local/lib/libocilib.a)
target_link_libraries(${PROJECT_NAME} libocilib)
target_link_libraries(${PROJECT_NAME} libnnz11)
target_link_libraries(${PROJECT_NAME} libclntsh)
target_link_libraries(${PROJECT_NAME} libociei)
